# SciDiscover

./: .env.example  .gitignore  .replit  CONTRIBUTING.md  DEPLOY.md  DISCLAIMER.md  Dockerfile  README.md  SECURITY.md  claude_thinking_log.txt  config.py  main.py  pyproject.toml  requirements-github.txt  requirements_dev.txt  setup.py
.streamlit/: config.toml
attached_assets/: Pasted--Analysis-Controls-Novelty-Level-0-00-1-00-Your-Research-Impact-Total-Score-0-Contributions-0-To-1740882988701.txt  Pasted--SciDiscover-A-scientific-discovery-framework-for-analyzing-molecular-mechanisms-and-pathways--1740936023294.txt  Pasted--SciDiscover-A-scientific-discovery-framework-for-analyzing-molecular-mechanisms-and-pathways-Power-1740893230289.txt  Pasted--SciDiscover-Enhancement-Integrating-Coscientist-Capabilities-Current-System-Analysis-Your-Sci-1740894890722.txt  Pasted-Models-pricing-Extended-thinking-models-Claude-3-7-Sonnet-is-a-hybrid-model-capable-of-both-stand-1740887542697.txt  Pasted-SciDiscover-A-scientific-discovery-framework-for-analyzing-molecular-mechanisms-and-pathways-Power-1740880899595.txt  Pasted-SciDiscover-A-scientific-discovery-framework-for-analyzing-molecular-mechanisms-and-pathways-Power-1740884087373.txt  Pasted-SciDiscover-A-scientific-discovery-framework-for-analyzing-molecular-mechanisms-and-pathways-Power-1740885625574.txt  Pasted-SciDiscover-A-scientific-discovery-framework-for-analyzing-molecular-mechanisms-and-pathways-Powere-1740898139585.txt  SciAgent README.md  (+1 more)
resources/: README.txt
scidiscover/: __init__.py  config.py  snapshot.py
(+33 files in other folders)
