[project]
name = "scidiscover"
version = "0.2.0"
description = "A scientific discovery framework for analyzing molecular mechanisms and pathways"
requires-python = ">=3.11"
dependencies = [
    "anthropic>=0.51.0",  # Updated version for extended thinking support
    "networkx>=3.4.2",
    "openai>=1.65.2",
    "pandas>=2.2.3",
    "plotly>=6.0.0",
    "streamlit>=1.42.2",
]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "black>=22.0.0",
]